--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.7"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.8",
         "brackets/admin-generator": "^6.2",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
